--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.3",
     "webpack": "^1.13.2",
-    "html-loader": "^0.4.3"
+    "html-loader": "^0.4.3",
+    "imports-loader": "^0.6.5",
+    "exports-loader": "^0.6.3",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
 
