set up webpack to take all from package.js, but still need to do something with styles

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^4.6.3",
     
 
+    "glob": "^7.1.1",
+    "html-entities": "^1.2.1",
     "html-loader": "^0.4.3",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
