--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.3",
-    
 
     "glob": "^7.1.1",
     "html-entities": "^1.2.1",
@@ -37,13 +36,16 @@
     "underscore": "^1.8.3",
     "backbone": "^1.3.3",
 
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
+
     "bootstrap": "^4.0.0-beta.2"
   },
   "devDependencies": {
 
   },
   "scripts": {
-    "dev": "NODE_ENV='dev' webpack",
+    "dev": "NODE_ENV='development' webpack",
     "prod": "NODE_ENV='prod' webpack"
   }
 }
