--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "css-loader": "^0.28.7",
     "style-loader": "^0.19.0",
 
+    "cache-manifest-generator": "^0.7.0",
+
     "bootstrap": "^4.0.0-beta.2"
   },
   "devDependencies": {
